--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,13 @@
     	<servlet-name>ProjectController</servlet-name>
     	<servlet-class>controller.ProjectController</servlet-class>
     </servlet>
+    <servlet>
+    	<description>
+    	</description>
+    	<display-name>LogoutController</display-name>
+    	<servlet-name>LogoutController</servlet-name>
+    	<servlet-class>controller.LogoutController</servlet-class>
+    </servlet>
 	
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -51,5 +58,9 @@
     <servlet-mapping>
     	<servlet-name>ProjectController</servlet-name>
     	<url-pattern>/ProjectController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+    	<servlet-name>LogoutController</servlet-name>
+    	<url-pattern>/LogoutController</url-pattern>
     </servlet-mapping>
 </web-app>
